--- a/app/src/main/res/layout/activity_txteditor.xml
+++ b/app/src/main/res/layout/activity_txteditor.xml
@@ -162,7 +162,7 @@
                             app:unCheckedResId="@mipmap/font_color_gray" />
 
                         <com.hdl.hricheditor.view.MyRadioButton
-                            android:id="@+id/mrb_font_option_whete"
+                            android:id="@+id/mrb_font_option_white"
                             style="@style/fontcolor"
                             app:checkedResId="@mipmap/font_color_whete_selected"
                             app:unCheckedResId="@mipmap/font_color_whete" />
@@ -234,7 +234,7 @@
                     android:paddingLeft="5.0dip"
                     android:paddingRight="10.0dip"
                     android:paddingTop="2.0dip"
-                    android:text="点击添加链接"
+                    android:text="@string/txt_click_btn_add_link"
                     android:textColor="#ffffffff" />
 
                 <RadioGroup
@@ -290,7 +290,8 @@
                     android:layout_height="fill_parent"
                     android:background="@drawable/shape_item_bg"
                     android:gravity="start"
-                    android:hint="不能超过5000字"
+                    android:hint="@string/ucrop_error_input_data_is_absent"
+                    android:maxLength="5000"
                     android:padding="5dp"
                     android:textColorHint="#ffc6c1c1"
                     android:textSize="16.0sp" />
