--- a/HRichEditorView/src/main/res/layout/activity_hricheditorview.xml
+++ b/HRichEditorView/src/main/res/layout/activity_hricheditorview.xml
@@ -4,6 +4,6 @@
     android:id="@+id/activity_hricheditorview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hdl.view.HRichEditorView">
+    tools:context="com.hdl.com.huangdali.view.HRichEditorView">
 
 </RelativeLayout>
